@@ -42,9 +42,6 @@ extern "C" {
 
 
 
-int im_dilate( VipsImage *in, VipsImage *out, INTMASK *mask );
-int im_erode( VipsImage *in, VipsImage *out, INTMASK *mask );
-
 int im_rank( VipsImage *in, VipsImage *out, int width, int height, int index );
 
 int im_cntlines( VipsImage *im, double *nolines, int flag );
